# uSolaris

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/bmp/: CMakeLists.txt  main.cpp
examples/sdl2/: CMakeLists.txt  main.cpp
include/usolaris/: basic_rasterizer.hpp  bc1_texture.hpp  env_map.hpp  ferndale_studio_04_1k.hpp  ferndale_studio_04_1k_bc1.hpp  mesh.hpp  meshlet_builder.hpp  pixel_format.hpp  primitives.hpp  rasterizer.hpp  scene.hpp  suburban_garden_1k.h  suburban_garden_1k_bc1.hpp  suburban_garden_512_bc1.hpp  texture.hpp  vertex.hpp  vertex_transform.hpp
python/: encode_bc1.py
tools/python/: hdr_to_hpp.py
